Upsert implementation - wip